Upgrade to latest scala-maven-plugin and prepare for Scala 3 (Final) (#1807)
* Part 3 of plugin upgrade - WiP

* Part 3 of plugin upgrade - WiP

* Part 3 of plugin upgrade - WiP

* Part 3 of plugin upgrade - WiP

* Part 3 of plugin upgrade - WiP

* Part 3 of plugin upgrade - WiP

* Part 3 of plugin upgrade - WiP

* Part 3 of plugin upgrade - WiP